# multi_robot_amr_mini

./: CMakeLists.txt  package.xml
config/: amcl.yaml  ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
launch/: amcl.launch.py  bringup.launch.py  ekf.launch.py  gazebo.launch.py  map_save.launch.py  map_server.launch.py  merge_laser.launch.py  nav2.launch.py  navigation.launch.py  navigation_stack.launch.py  rviz.launch.py  simulation.launch.py  slam_toolbox.launch.py  twist_mux.launch.py
maps/: my_map.pgm  my_map.yaml
models/V-marker_left_side/: model.config  model.sdf
models/amr_mini/: model.config  model.sdf
models/barrels/: model.config  model.sdf
models/kavsak/: model.config  model.sdf
models/walls/: model.config  model.sdf
rviz/: amr_mini.rviz
urdf_amr/: amr_mini.xacro
urdf_amr/urdf_include/: base_link.xacro  camera.xacro  caster_wheel.xacro  caster_wheel_link.xacro  common_properties.urdf.xacro  gazebo.xacro  imu.xacro  lidar.xacro  motor.xacro  wheel.xacro
world/: my_world.model  my_world.world
